# local-deepthink

./: .gitignore  README.md  RELEASE_NOTES.md  app.py  index.html  pyproject.toml  requirements.txt
css/: theme.css
deepthink/: __init__.py  knowledge_distillation.py  utils.py
deepthink/chains/: __init__.py  brainstorm_chains.py  perplexity_chain.py
js/components/: memory-calculator.js
tests/: phase10_static.py  phase11_regression.py  phase1_imports.py  phase2_utils.py  phase3_chains.py  phase4_state.py  phase5_endpoints.py  phase6_distillation.py  phase7_mocks.py  phase8_nodes.py  phase9_e2e.py
